syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message CounterServerLimits {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message CounterServerResponse {
    int64 currentValue = 1;
}

message Empty {}

service RemoteCounterService {
    rpc startCounter(CounterServerLimits) returns (stream CounterServerResponse);
}
